--- a/contact.html
+++ b/contact.html
@@ -7,22 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(c,b,d){var a=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var d=a[b]+"MaxTouchPoints";if(d in navigator&&navigator[d])return!0}try{return document.createEvent("TouchEvent"),!0}catch(f){}return!1}(),f=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var d=b[c];d.charAt(0)==" ";)d=d.substring(1,d.length);if(d.indexOf(a)==
+0)return d.substring(a.length,d.length)}return null};if(f("inbrowserediting")!="true"){var h,f=f("devicelock");f=="phone"&&d?h=d:f=="tablet"&&b&&(h=b);if(f!=c&&!h)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&d?h=d:window.matchMedia("(max-device-width: 960px)").matches&&b&&a&&(h=b);else{var c=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),f=window.screen.systemXDPI||0,g=window.screen.systemYDPI||0,f=f>0&&g>0?Math.min(screen.width/f,screen.height/g):
+0;(c<=370||f!=0&&f<=3)&&d?h=d:c<=960&&b&&a&&(h=b)}if(h)document.location=h+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/contact.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "contact.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.museresponsive.js", "webpro.js", "contact.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://www.hebreunion.co.uk/phone/contact.html"/>
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=373709799"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=374365875"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=4131282597" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=224039739"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=4290997295" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=86206944" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=4009070188" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -30,6 +36,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/nova-slim:n4:default;dosis:n3:default.js" type="text/javascript"></script>
+  <!--[if lt IE 9]>
+  <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
+  <![endif]-->
    </head>
  <body>
 
@@ -60,22 +69,84 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clearfix colelem shared_content" id="u1938-4" data-content-guid="u1938-4_content"><!-- content -->
-     <p>Contact</p>
-    </div>
-    <div class="verticalspacer" data-offset-top="275" data-content-above-spacer="275" data-content-below-spacer="525" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <form class="form-grp clearfix colelem" id="widgetu3606" method="post" enctype="multipart/form-data" action="scripts/form-u3606.php" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+     <div class="position_content" id="widgetu3606_position_content">
+      <div class="fld-grp clearfix colelem" id="widgetu3617" data-required="true" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem" id="u3620-5" for="widgetu3617_input"><!-- content --><span class="actAsPara shared_content" data-content-guid="u3620-5_0_content"><span id="u3620">Name</span>:</span></label>
+       <span class="fld-input NoWrap actAsDiv clearfix colelem" id="u3619-4"><!-- content --><div id="u3619-3"><input class="wrapped-input shared_content" type="text" spellcheck="false" id="widgetu3617_input" name="custom_U3617" tabindex="1" data-content-guid="widgetu3617_input_content"/><label class="wrapped-input fld-prompt" id="widgetu3617_prompt" for="widgetu3617_input"><span class="actAsPara shared_content" data-content-guid="widgetu3617_prompt_0_content">Enter Name</span></label></div></span>
+      </div>
+      <div class="fld-grp clearfix colelem" id="widgetu3613" data-required="true" data-type="email" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem" id="u3616-5" for="widgetu3613_input"><!-- content --><span class="actAsPara shared_content" data-content-guid="u3616-5_0_content"><span id="u3616">Email</span>:</span></label>
+       <span class="fld-input NoWrap actAsDiv clearfix colelem" id="u3614-4"><!-- content --><div id="u3614-3"><input class="wrapped-input shared_content" type="email" spellcheck="false" id="widgetu3613_input" name="Email" tabindex="2" data-content-guid="widgetu3613_input_content"/><label class="wrapped-input fld-prompt" id="widgetu3613_prompt" for="widgetu3613_input"><span class="actAsPara shared_content" data-content-guid="widgetu3613_prompt_0_content">Enter Email</span></label></div></span>
+      </div>
+      <div class="fld-grp clearfix colelem" id="widgetu3608" data-required="false" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem" id="u3611-5" for="widgetu3608_input"><!-- content --><span class="actAsPara shared_content" data-content-guid="u3611-5_0_content"><span id="u3611">Message</span>:</span></label>
+       <span class="fld-textarea actAsDiv clearfix colelem" id="u3609-4"><!-- content --><div id="u3609-3"><textarea class="wrapped-input shared_content" id="widgetu3608_input" name="custom_U3608" tabindex="3" data-content-guid="widgetu3608_input_content"></textarea><label class="wrapped-input fld-prompt" id="widgetu3608_prompt" for="widgetu3608_input"><span class="actAsPara shared_content" data-content-guid="widgetu3608_prompt_0_content">Enter Your Message</span></label></div></span>
+      </div>
+      <div class="fld-grp clearfix colelem" id="widgetu3676" data-required="true" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem" id="u3678-5" for="widgetu3676_input"><!-- content --><span class="actAsPara shared_content" data-content-guid="u3678-5_0_content"><span id="u3678">Mobile Phone</span>:</span></label>
+       <span class="fld-input NoWrap actAsDiv clearfix colelem" id="u3679-4"><!-- content --><div id="u3679-3"><input class="wrapped-input shared_content" type="tel" spellcheck="false" id="widgetu3676_input" name="custom_U3676" tabindex="4" data-content-guid="widgetu3676_input_content"/><label class="wrapped-input fld-prompt" id="widgetu3676_prompt" for="widgetu3676_input"><span class="actAsPara shared_content" data-content-guid="widgetu3676_prompt_0_content">Enter Phone Number</span></label></div></span>
+      </div>
+      <div class="clearfix colelem" id="pu3607-4"><!-- group -->
+       <div class="clearfix grpelem" id="u3607-4"><!-- content -->
+        <p class="shared_content" data-content-guid="u3607-4_0_content">Submitting Form...</p>
+       </div>
+       <div class="clearfix grpelem" id="u3622-4"><!-- content -->
+        <p class="shared_content" data-content-guid="u3622-4_0_content">The server encountered an error.</p>
+       </div>
+       <div class="clearfix grpelem" id="u3621-4"><!-- content -->
+        <p class="shared_content" data-content-guid="u3621-4_0_content">Form received.</p>
+       </div>
+       <button class="submit-btn NoWrap rounded-corners clearfix grpelem" id="u3612-4" type="submit" value="Submit" tabindex="5"><!-- content -->
+        <div style="margin-top:-12px;height:12px;" class="shared_content" data-content-guid="u3612-4_0_content">
+         <p>Submit</p>
+        </div>
+       </button>
+      </div>
+     </div>
+    </form>
+    <div class="verticalspacer shared_content" data-offset-top="502" data-content-above-spacer="502" data-content-below-spacer="297" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_3_content"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_960" data-max-width="960"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="position_content" id="page_position_content">
-     <div class="clearfix colelem" id="pu1110-4"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u1110-4_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u2357_content"><!-- placeholder node --></span>
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <span class="clearfix grpelem placeholder" data-placeholder-for="u1110-4_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="u2357_content"><!-- placeholder node --></span>
+    <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="scripts/form-u3606.php" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx" data-orig-id="widgetu3606"><!-- none box -->
+     <div class="position_content temp_no_id" data-orig-id="widgetu3606_position_content">
+      <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx" data-orig-id="widgetu3617"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem temp_no_id" for="widgetu3617_input" data-orig-id="u3620-5"><!-- content --><span class="actAsPara placeholder" data-placeholder-for="u3620-5_0_content"><!-- placeholder node --></span></label>
+       <span class="fld-input NoWrap actAsDiv clearfix colelem temp_no_id" data-orig-id="u3619-4"><!-- content --><div class="temp_no_id" data-orig-id="u3619-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu3617_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu3617_input" data-orig-id="widgetu3617_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu3617_prompt_0_content"><!-- placeholder node --></span></label></div></span>
+      </div>
+      <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-type="email" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx" data-orig-id="widgetu3613"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem temp_no_id" for="widgetu3613_input" data-orig-id="u3616-5"><!-- content --><span class="actAsPara placeholder" data-placeholder-for="u3616-5_0_content"><!-- placeholder node --></span></label>
+       <span class="fld-input NoWrap actAsDiv clearfix colelem temp_no_id" data-orig-id="u3614-4"><!-- content --><div class="temp_no_id" data-orig-id="u3614-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu3613_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu3613_input" data-orig-id="widgetu3613_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu3613_prompt_0_content"><!-- placeholder node --></span></label></div></span>
+      </div>
+      <div class="fld-grp clearfix colelem temp_no_id" data-required="false" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx" data-orig-id="widgetu3608"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem temp_no_id" for="widgetu3608_input" data-orig-id="u3611-5"><!-- content --><span class="actAsPara placeholder" data-placeholder-for="u3611-5_0_content"><!-- placeholder node --></span></label>
+       <span class="fld-textarea actAsDiv clearfix colelem temp_no_id" data-orig-id="u3609-4"><!-- content --><div class="temp_no_id" data-orig-id="u3609-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu3608_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu3608_input" data-orig-id="widgetu3608_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu3608_prompt_0_content"><!-- placeholder node --></span></label></div></span>
+      </div>
+      <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx" data-orig-id="widgetu3676"><!-- none box -->
+       <label class="fld-label actAsDiv clearfix colelem temp_no_id" for="widgetu3676_input" data-orig-id="u3678-5"><!-- content --><span class="actAsPara placeholder" data-placeholder-for="u3678-5_0_content"><!-- placeholder node --></span></label>
+       <span class="fld-input NoWrap actAsDiv clearfix colelem temp_no_id" data-orig-id="u3679-4"><!-- content --><div class="temp_no_id" data-orig-id="u3679-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu3676_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu3676_input" data-orig-id="widgetu3676_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu3676_prompt_0_content"><!-- placeholder node --></span></label></div></span>
+      </div>
+      <div class="clearfix colelem temp_no_id" data-orig-id="pu3607-4"><!-- group -->
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u3607-4"><!-- content -->
+        <span class="placeholder" data-placeholder-for="u3607-4_0_content"><!-- placeholder node --></span>
+       </div>
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u3622-4"><!-- content -->
+        <span class="placeholder" data-placeholder-for="u3622-4_0_content"><!-- placeholder node --></span>
+       </div>
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u3621-4"><!-- content -->
+        <span class="placeholder" data-placeholder-for="u3621-4_0_content"><!-- placeholder node --></span>
+       </div>
+       <button class="submit-btn NoWrap rounded-corners clearfix grpelem temp_no_id" type="submit" value="Submit" tabindex="10" data-orig-id="u3612-4"><!-- content -->
+        <span class="placeholder" data-placeholder-for="u3612-4_0_content"><!-- placeholder node --></span>
+       </button>
+      </div>
      </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u1938-4_content"><!-- placeholder node --></span>
-     <div class="verticalspacer" data-offset-top="275" data-content-above-spacer="275" data-content-below-spacer="525" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    </div>
+    </form>
+    <span class="verticalspacer placeholder" data-placeholder-for="page_3_content"><!-- placeholder node --></span>
    </div>
   </div>
   <!-- Other scripts -->
@@ -89,11 +160,12 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.museresponsive"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","jquery.watch","jquery.museresponsive"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('#widgetu3606', ['#bp_infinity', '#bp_960'], function(elem) { return new WebPro.Widget.Form(elem, {validationEvent:'submit',errorStateSensitivity:'high',fieldWrapperClass:'fld-grp',formSubmittedClass:'frm-sub-st',formErrorClass:'frm-subm-err-st',formDeliveredClass:'frm-subm-ok-st',notEmptyClass:'non-empty-st',focusClass:'focus-st',invalidClass:'fld-err-st',requiredClass:'fld-err-st',ajaxSubmit:true}); });/* #widgetu3606 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
