--- a/events.html
+++ b/events.html
@@ -7,22 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(c,b,d){var a=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var d=a[b]+"MaxTouchPoints";if(d in navigator&&navigator[d])return!0}try{return document.createEvent("TouchEvent"),!0}catch(f){}return!1}(),f=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var d=b[c];d.charAt(0)==" ";)d=d.substring(1,d.length);if(d.indexOf(a)==
+0)return d.substring(a.length,d.length)}return null};if(f("inbrowserediting")!="true"){var h,f=f("devicelock");f=="phone"&&d?h=d:f=="tablet"&&b&&(h=b);if(f!=c&&!h)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&d?h=d:window.matchMedia("(max-device-width: 960px)").matches&&b&&a&&(h=b);else{var c=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),f=window.screen.systemXDPI||0,g=window.screen.systemYDPI||0,f=f>0&&g>0?Math.min(screen.width/f,screen.height/g):
+0;(c<=370||f!=0&&f<=3)&&d?h=d:c<=960&&b&&a&&(h=b)}if(h)document.location=h+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/events.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "webpro.js", "musewpdisclosure.js", "events.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.museresponsive.js", "webpro.js", "musewpdisclosure.js", "events.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://www.hebreunion.co.uk/phone/events.html"/>
   <title>Events</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=373709799"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=374365875"/>
-  <link rel="stylesheet" type="text/css" href="css/events.css?crc=3932142609" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=224039739"/>
+  <link rel="stylesheet" type="text/css" href="css/events.css?crc=387640020" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=336795747" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=411071391" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -30,6 +36,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/nova-slim:n4:default;dosis:n3:default.js" type="text/javascript"></script>
+  <!--[if lt IE 9]>
+  <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
+  <![endif]-->
    </head>
  <body>
 
@@ -62,30 +71,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="accordion_wrapper colelem" id="accordionu2886wrapper"><!-- vertical box -->
      <ul class="AccordionWidget clearfix" id="accordionu2886" data-visibility="changed" style="visibility:hidden"><!-- column -->
-      <li class="AccordionPanel clearfix colelem" id="u2891"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2892-4"><!-- content --><div id="u2892-3" class="shared_content" data-content-guid="u2892-3_content"><p>Friday Event</p></div></div><div class="AccordionPanelContent clearfix colelem" id="u2893"><!-- group --><div class="clearfix grpelem shared_content" id="u2894-18" data-content-guid="u2894-18_content"><!-- content --><p>The event takes place on the weekend of 12-14th April 2019.</p><p>Friday night will be the main event and a more formal evening with a sit-down meal.&nbsp; Fridays main event begins at 4pm and will be held in the Cabarfeidh Hotel.&nbsp; All attendees should arrive in plenty time to pick up registration packs.</p><p>&nbsp;</p><p>more stuff to be entered here</p><p>&nbsp;</p><p>lots more text to go here</p><p>&nbsp;</p><p>and here.</p><p>&nbsp;</p><p>and here</p></div></div></li>
+      <li class="AccordionPanel clearfix colelem" id="u2891"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2892-4"><!-- content --><div id="u2892-3" class="shared_content" data-content-guid="u2892-3_content"><p>Friday Event</p></div></div><div class="AccordionPanelContent disn clearfix colelem" id="u2893"><!-- group --><div class="clearfix grpelem shared_content" id="u2894-18" data-content-guid="u2894-18_content"><!-- content --><p>The event takes place on the weekend of 12-14th April 2019.</p><p>Friday night will be the main event and a more formal evening with a sit-down meal.&nbsp; Fridays main event begins at 4pm and will be held in the Cabarfeidh Hotel.&nbsp; All attendees should arrive in plenty time to pick up registration packs.</p><p>&nbsp;</p><p>more stuff to be entered here</p><p>&nbsp;</p><p>lots more text to go here</p><p>&nbsp;</p><p>and here.</p><p>&nbsp;</p><p>and here</p></div></div></li>
       <li class="AccordionPanel clearfix colelem" id="u2895"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2896-4"><!-- content --><div id="u2896-3" class="shared_content" data-content-guid="u2896-3_content"><p>Saturday Event</p></div></div><div class="AccordionPanelContent disn clearfix colelem" id="u2897"><!-- group --><div class="clearfix grpelem shared_content" id="u2898-4" data-content-guid="u2898-4_content"><!-- content --><p>The Saturday will be an informal evening.&nbsp; A great opportunity to catch up (again) with friends from the previous evening.&nbsp; The Saturday evening is also an opportunity to bring partners along.</p></div></div></li>
       <li class="AccordionPanel clearfix colelem" id="u2887"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2888-4"><!-- content --><div id="u2888-3" class="shared_content" data-content-guid="u2888-3_content"><p>Sunday&nbsp; Event</p></div></div><div class="AccordionPanelContent disn clearfix colelem" id="u2889"><!-- group --><div class="clearfix grpelem shared_content" id="u2890-4" data-content-guid="u2890-4_content"><!-- content --><p>The Sunday evening will be an opportunity for all to meet again at a fellowship</p></div></div></li>
      </ul>
     </div>
-    <div class="verticalspacer" data-offset-top="608" data-content-above-spacer="609" data-content-below-spacer="190" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="298" data-content-above-spacer="299" data-content-below-spacer="500" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_960" data-max-width="960"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="position_content" id="page_position_content">
-     <div class="clearfix colelem" id="pu1110-4"><!-- group -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u1110-4_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u2357_content"><!-- placeholder node --></span>
-     </div>
-     <div class="accordion_wrapper colelem temp_no_id" data-orig-id="accordionu2886wrapper"><!-- vertical box -->
-      <ul class="AccordionWidget clearfix temp_no_id" data-visibility="changed" style="visibility:hidden" data-orig-id="accordionu2886"><!-- column -->
-       <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u2891"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem temp_no_id" data-orig-id="u2892-4"><!-- content --><span class="placeholder" data-placeholder-for="u2892-3_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent clearfix colelem temp_no_id" data-orig-id="u2893"><!-- group --><span class="clearfix grpelem placeholder" data-placeholder-for="u2894-18_content"><!-- placeholder node --></span></div></li>
-       <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u2895"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem temp_no_id" data-orig-id="u2896-4"><!-- content --><span class="placeholder" data-placeholder-for="u2896-3_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u2897"><!-- group --><span class="clearfix grpelem placeholder" data-placeholder-for="u2898-4_content"><!-- placeholder node --></span></div></li>
-       <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u2887"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem temp_no_id" data-orig-id="u2888-4"><!-- content --><span class="placeholder" data-placeholder-for="u2888-3_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u2889"><!-- group --><span class="clearfix grpelem placeholder" data-placeholder-for="u2890-4_content"><!-- placeholder node --></span></div></li>
-      </ul>
-     </div>
-     <div class="verticalspacer" data-offset-top="608" data-content-above-spacer="609" data-content-below-spacer="190" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <span class="clearfix grpelem placeholder" data-placeholder-for="u1110-4_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="u2357_content"><!-- placeholder node --></span>
+    <div class="accordion_wrapper grpelem temp_no_id" data-orig-id="accordionu2886wrapper"><!-- vertical box -->
+     <ul class="AccordionWidget clearfix temp_no_id" data-visibility="changed" style="visibility:hidden" data-orig-id="accordionu2886"><!-- column -->
+      <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u2891"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem temp_no_id" data-orig-id="u2892-4"><!-- content --><span class="placeholder" data-placeholder-for="u2892-3_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u2893"><!-- group --><span class="clearfix grpelem placeholder" data-placeholder-for="u2894-18_content"><!-- placeholder node --></span></div></li>
+      <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u2895"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem temp_no_id" data-orig-id="u2896-4"><!-- content --><span class="placeholder" data-placeholder-for="u2896-3_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u2897"><!-- group --><span class="clearfix grpelem placeholder" data-placeholder-for="u2898-4_content"><!-- placeholder node --></span></div></li>
+      <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u2887"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem temp_no_id" data-orig-id="u2888-4"><!-- content --><span class="placeholder" data-placeholder-for="u2888-3_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u2889"><!-- group --><span class="clearfix grpelem placeholder" data-placeholder-for="u2890-4_content"><!-- placeholder node --></span></div></li>
+     </ul>
     </div>
+    <div class="verticalspacer" data-offset-top="298" data-content-above-spacer="299" data-content-below-spacer="501" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <!-- Other scripts -->
@@ -104,7 +109,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('#accordionu2886', ['#bp_infinity', '#bp_960'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:0}); });/* #accordionu2886 */
+Muse.Utils.initWidget('#accordionu2886', ['#bp_infinity', '#bp_960'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:-1}); });/* #accordionu2886 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
